Fixed refs, started BDD project, upd packages

--- a/UnitTest/UnitTestBDD.csproj
+++ b/UnitTest/UnitTestBDD.csproj
@@ -5,11 +5,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F97696C6-DA68-46A4-8FD7-77AA15BAE917}</ProjectGuid>
+    <ProjectGuid>{BA429E16-0239-4813-A4DB-1CAB57BCA1E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AutoTest</RootNamespace>
-    <AssemblyName>AutoTest</AssemblyName>
+    <RootNamespace>UnitTest</RootNamespace>
+    <AssemblyName>UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -67,8 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ObjectModel.cs" />
-    <Compile Include="UnitAutoTests.cs" />
+    <Compile Include="CalcFeature.cs" />
+    <Compile Include="UnitTestBDD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
